# game-of-life

./: CMakeLists.txt
include/: draw.h
